# mihomocli

./: .gitignore  AGENTS.md  CLI_USAGE.md  Cargo.toml  LICENSE  PLAN.md  README.md  SPEC.md  flake.nix
.github/ISSUE_TEMPLATE/: cli_runtime_options.md  runtime_apply_research.md
.github/workflows/: README.md  build.yml  ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  merge.rs  model.rs  output.rs  storage.rs  subscription.rs  template.rs
crates/core/src/subscription/: mod.rs  parser.rs
examples/: cvr_template.yaml  default.yaml  subscription.yaml  template.yaml
resources/: README.md  base-config.example.yaml
scripts/: create_issues.sh  refresh_clash_verge.sh
