[workspace]
members = [
    "crates/core",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["mihomocli contributors"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage"] }
serde_json = "1"
uuid = { version = "1", features = ["std", "v4"] }
base64 = "0.22"
percent-encoding = "2.3"
url = "2.5"
indexmap = { version = "2" , features = ["serde"] }
