[package]
name = "mihomo-core"
version = "0.1.0"
edition = "2021"
authors = ["mihomocli contributors"]
license = "MIT"
description = "Core logic for mihomo subscription merging"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
url = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
